# cosmic-applet-about-linux

./: Cargo.toml  README.md  justfile
i18n/en/: cosmic_applet_linux_menu.ftl
i18n/id/: cosmic_applet_linux_menu.ftl
resources/: app.desktop  app.metainfo.xml
src/: about.rs  app.rs  main.rs
